dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__context_resolver__context_not_ready_releases_flow_credits.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] DEBUG distributor created
0:00:00.000000000 [main] TRACE c#credit.acquire.fast_path=1
0:00:00.000000000 [main] TRACE c#credit.acquire.bytes=3906
0:00:00.000000000 [main] TRACE c#credit.release.bytes=3906
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main]  WARN dropping batch: send context not ready error=PeerDataAddrsNotReady peer=127.0.0.1:4433 released_credits=3906
0:00:00.010000000 [main] DEBUG distributor dropping; closing pool
