dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__context_resolver__same_peer_reuses_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xb825b05b860f8a17c74724ad21b1b2f3:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] TRACE g#send.context.count[send.0]=1
0:00:00.000000000 [main] TRACE c#send.pending.enq[send.0]=1
0:00:00.000000000 [main] TRACE g#send.pending.depth[send.0]=1
0:00:00.000000000 [main] TRACE m#send.pending.depth_dist[send.0]=1
0:00:00.000000000 [main] TRACE c#send.pending.enq[send.0]=1
0:00:00.000000000 [main] TRACE g#send.pending.depth[send.0]=2
0:00:00.000000000 [main] TRACE m#send.pending.depth_dist[send.0]=2
