dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__context_resolver__wheel_router_routes_all_interest_combinations.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
